<resources>
    <string name="app_name">Today In Football</string>
    <string name="check_connection">Please check your connection and retry.</string>
    <string name="getting_your_daily_football_news">Getting Your Daily Football News</string>
    <string name="no_football_news_was_found_ntry_starting_again_in_5_minutes_for_fresh_football_news">No Football news was found.  Try starting again in 5 minutes for fresh Football news.</string>
    <string name="unknown_writer">Unknown Writer</string>
    <string name="install_browser">Please install a browser</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>
    <string name="please_wait">Please wait while your news loads.</string>
    <string name="settings_number_of_stories">Number of Stories</string>
    <string name="settings_number_of_stories_dialog">Load between 1 and 50 stories</string>
    <string name="settings_number_of_stories_key" translatable="false">story_quantity</string>
    <string name="settings_number_of_stories_default" translatable="false">20</string>
    <string name="settings_number_of_stories_summary">Select the number of stories</string>
    <string name="settings_number_of_stories_input" translatable="false">numberDecimal</string>
    <string name="settings_date_of_stories">Story Date</string>
    <string name="settings_date_of_stories_summary">Limit results to Today\'s Stories</string>
    <string name="settings_date_of_stories_key" translatable="false">story_date</string>
    <string name="settings_date_of_stories_default" translatable="false">false</string>
</resources>
