<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.preference.PreferenceCategory android:title="@string/settings_title">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="@string/settings_date_of_stories_default"
            android:key="@string/settings_date_of_stories_key"
            android:summary="@string/settings_date_of_stories_summary"
            android:title="@string/settings_date_of_stories" />

        <android.support.v7.preference.EditTextPreference
            android:defaultValue="@string/settings_number_of_stories_default"
            android:dialogMessage="@string/settings_number_of_stories_dialog"
            android:inputType="@string/settings_number_of_stories_input"
            android:key="@string/settings_number_of_stories_key"
            android:summary="@string/settings_number_of_stories_summary"
            android:title="@string/settings_number_of_stories"/>

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>